// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit matches snapshot with basic style 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-list"
      >
        <div>
           
          {"clientId":"LIST-ITEM-1","name":"material/list-item","attributes":{"url":"http://example.com","primaryText":"List Item #1","secondaryText":"List Item #1 secondary text"}}
           
        </div>
        <div>
           
          {"clientId":"LIST-ITEM-2","name":"material/list-item","attributes":{"url":"http://example.com/item-2","primaryText":"List Item #2","secondaryText":"List Item #2 secondary text"}}
           
        </div>
      </div>
      <div
        class="components-panel__body is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
                />
              </svg>
            </span>
            Style
          </button>
        </h2>
        <div
          class="components-base-control components-radio-control components-image-radio-control"
        >
          <div
            class="components-base-control__field"
          >
            <div
              class="components-radio-control__option active"
            >
              <input
                checked=""
                class="components-radio-control__input"
                id="image-radio-control-0-0"
                name="image-radio-control-0"
                type="radio"
                value="basic"
              />
              <label
                for="image-radio-control-0-0"
              >
                <div
                  class="components-image-radio-control__image"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 34 24"
                    width="34"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#565D66"
                      height="5"
                      width="5"
                      x="0.181641"
                      y="9.78687"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="9.18164"
                      y="11.2869"
                    />
                    <rect
                      fill="#565D66"
                      height="5"
                      width="5"
                      x="0.181641"
                      y="0.786865"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="9.18164"
                      y="2.28687"
                    />
                    <rect
                      fill="#565D66"
                      height="5"
                      width="5"
                      x="0.181641"
                      y="18.7869"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="9.18164"
                      y="20.2869"
                    />
                  </svg>
                </div>
                <span
                  class="components-image-radio-control__label"
                >
                  Basic List Item
                </span>
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="image-radio-control-0-1"
                name="image-radio-control-0"
                type="radio"
                value="two-line"
              />
              <label
                for="image-radio-control-0-1"
              >
                <div
                  class="components-image-radio-control__image"
                >
                  <svg
                    fill="none"
                    height="33"
                    viewBox="0 0 36 33"
                    width="36"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#565D66"
                      height="8"
                      width="8"
                      x="0.25"
                      y="0.286865"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="1.28687"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="5.28687"
                    />
                    <rect
                      fill="#565D66"
                      height="8"
                      width="8"
                      x="0.25"
                      y="12.2869"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="13.2869"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="17.2869"
                    />
                    <rect
                      fill="#565D66"
                      height="8"
                      width="8"
                      x="0.25"
                      y="24.2869"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="25.2869"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="29.2869"
                    />
                  </svg>
                </div>
                <span
                  class="components-image-radio-control__label"
                >
                  List Item With Secondary Text
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="components-base-control components-toggle-control"
        >
          <div
            class="components-base-control__field"
          >
            <span
              class="components-form-toggle"
            >
              <input
                class="components-form-toggle__input"
                id="inspector-toggle-control-0"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
              <svg
                aria-hidden="true"
                class="components-form-toggle__off"
                focusable="false"
                height="6"
                role="img"
                viewBox="0 0 6 6"
                width="6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
                />
              </svg>
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-0"
            >
              Leading Icons
            </label>
          </div>
        </div>
        <div
          class="components-base-control components-toggle-control"
        >
          <div
            class="components-base-control__field"
          >
            <span
              class="components-form-toggle"
            >
              <input
                class="components-form-toggle__input"
                id="inspector-toggle-control-1"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
              <svg
                aria-hidden="true"
                class="components-form-toggle__off"
                focusable="false"
                height="6"
                role="img"
                viewBox="0 0 6 6"
                width="6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
                />
              </svg>
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-1"
            >
              Trailing Icons
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-list"
    >
      <div>
         
        {"clientId":"LIST-ITEM-1","name":"material/list-item","attributes":{"url":"http://example.com","primaryText":"List Item #1","secondaryText":"List Item #1 secondary text"}}
         
      </div>
      <div>
         
        {"clientId":"LIST-ITEM-2","name":"material/list-item","attributes":{"url":"http://example.com/item-2","primaryText":"List Item #2","secondaryText":"List Item #2 secondary text"}}
         
      </div>
    </div>
    <div
      class="components-panel__body is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
              />
            </svg>
          </span>
          Style
        </button>
      </h2>
      <div
        class="components-base-control components-radio-control components-image-radio-control"
      >
        <div
          class="components-base-control__field"
        >
          <div
            class="components-radio-control__option active"
          >
            <input
              checked=""
              class="components-radio-control__input"
              id="image-radio-control-0-0"
              name="image-radio-control-0"
              type="radio"
              value="basic"
            />
            <label
              for="image-radio-control-0-0"
            >
              <div
                class="components-image-radio-control__image"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 34 24"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#565D66"
                    height="5"
                    width="5"
                    x="0.181641"
                    y="9.78687"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="9.18164"
                    y="11.2869"
                  />
                  <rect
                    fill="#565D66"
                    height="5"
                    width="5"
                    x="0.181641"
                    y="0.786865"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="9.18164"
                    y="2.28687"
                  />
                  <rect
                    fill="#565D66"
                    height="5"
                    width="5"
                    x="0.181641"
                    y="18.7869"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="9.18164"
                    y="20.2869"
                  />
                </svg>
              </div>
              <span
                class="components-image-radio-control__label"
              >
                Basic List Item
              </span>
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="image-radio-control-0-1"
              name="image-radio-control-0"
              type="radio"
              value="two-line"
            />
            <label
              for="image-radio-control-0-1"
            >
              <div
                class="components-image-radio-control__image"
              >
                <svg
                  fill="none"
                  height="33"
                  viewBox="0 0 36 33"
                  width="36"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#565D66"
                    height="8"
                    width="8"
                    x="0.25"
                    y="0.286865"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="1.28687"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="5.28687"
                  />
                  <rect
                    fill="#565D66"
                    height="8"
                    width="8"
                    x="0.25"
                    y="12.2869"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="13.2869"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="17.2869"
                  />
                  <rect
                    fill="#565D66"
                    height="8"
                    width="8"
                    x="0.25"
                    y="24.2869"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="25.2869"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="29.2869"
                  />
                </svg>
              </div>
              <span
                class="components-image-radio-control__label"
              >
                List Item With Secondary Text
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="components-base-control components-toggle-control"
      >
        <div
          class="components-base-control__field"
        >
          <span
            class="components-form-toggle"
          >
            <input
              class="components-form-toggle__input"
              id="inspector-toggle-control-0"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
            <svg
              aria-hidden="true"
              class="components-form-toggle__off"
              focusable="false"
              height="6"
              role="img"
              viewBox="0 0 6 6"
              width="6"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
              />
            </svg>
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-0"
          >
            Leading Icons
          </label>
        </div>
      </div>
      <div
        class="components-base-control components-toggle-control"
      >
        <div
          class="components-base-control__field"
        >
          <span
            class="components-form-toggle"
          >
            <input
              class="components-form-toggle__input"
              id="inspector-toggle-control-1"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
            <svg
              aria-hidden="true"
              class="components-form-toggle__off"
              focusable="false"
              height="6"
              role="img"
              viewBox="0 0 6 6"
              width="6"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
              />
            </svg>
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-1"
          >
            Trailing Icons
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Edit matches snapshot with two-line style 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-list mdc-list--two-line"
      >
        <div>
           
          {"clientId":"LIST-ITEM-1","name":"material/list-item","attributes":{"url":"http://example.com","primaryText":"List Item #1","secondaryText":"List Item #1 secondary text"}}
           
        </div>
        <div>
           
          {"clientId":"LIST-ITEM-2","name":"material/list-item","attributes":{"url":"http://example.com/item-2","primaryText":"List Item #2","secondaryText":"List Item #2 secondary text"}}
           
        </div>
      </div>
      <div
        class="components-panel__body is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
                />
              </svg>
            </span>
            Style
          </button>
        </h2>
        <div
          class="components-base-control components-radio-control components-image-radio-control"
        >
          <div
            class="components-base-control__field"
          >
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="image-radio-control-1-0"
                name="image-radio-control-1"
                type="radio"
                value="basic"
              />
              <label
                for="image-radio-control-1-0"
              >
                <div
                  class="components-image-radio-control__image"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 34 24"
                    width="34"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#565D66"
                      height="5"
                      width="5"
                      x="0.181641"
                      y="9.78687"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="9.18164"
                      y="11.2869"
                    />
                    <rect
                      fill="#565D66"
                      height="5"
                      width="5"
                      x="0.181641"
                      y="0.786865"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="9.18164"
                      y="2.28687"
                    />
                    <rect
                      fill="#565D66"
                      height="5"
                      width="5"
                      x="0.181641"
                      y="18.7869"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="9.18164"
                      y="20.2869"
                    />
                  </svg>
                </div>
                <span
                  class="components-image-radio-control__label"
                >
                  Basic List Item
                </span>
              </label>
            </div>
            <div
              class="components-radio-control__option active"
            >
              <input
                checked=""
                class="components-radio-control__input"
                id="image-radio-control-1-1"
                name="image-radio-control-1"
                type="radio"
                value="two-line"
              />
              <label
                for="image-radio-control-1-1"
              >
                <div
                  class="components-image-radio-control__image"
                >
                  <svg
                    fill="none"
                    height="33"
                    viewBox="0 0 36 33"
                    width="36"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#565D66"
                      height="8"
                      width="8"
                      x="0.25"
                      y="0.286865"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="1.28687"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="5.28687"
                    />
                    <rect
                      fill="#565D66"
                      height="8"
                      width="8"
                      x="0.25"
                      y="12.2869"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="13.2869"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="17.2869"
                    />
                    <rect
                      fill="#565D66"
                      height="8"
                      width="8"
                      x="0.25"
                      y="24.2869"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="25.2869"
                    />
                    <rect
                      fill="#545D67"
                      height="2"
                      width="24"
                      x="11.75"
                      y="29.2869"
                    />
                  </svg>
                </div>
                <span
                  class="components-image-radio-control__label"
                >
                  List Item With Secondary Text
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="components-base-control components-toggle-control"
        >
          <div
            class="components-base-control__field"
          >
            <span
              class="components-form-toggle"
            >
              <input
                class="components-form-toggle__input"
                id="inspector-toggle-control-2"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
              <svg
                aria-hidden="true"
                class="components-form-toggle__off"
                focusable="false"
                height="6"
                role="img"
                viewBox="0 0 6 6"
                width="6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
                />
              </svg>
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-2"
            >
              Leading Icons
            </label>
          </div>
        </div>
        <div
          class="components-base-control components-toggle-control"
        >
          <div
            class="components-base-control__field"
          >
            <span
              class="components-form-toggle"
            >
              <input
                class="components-form-toggle__input"
                id="inspector-toggle-control-3"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
              <svg
                aria-hidden="true"
                class="components-form-toggle__off"
                focusable="false"
                height="6"
                role="img"
                viewBox="0 0 6 6"
                width="6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
                />
              </svg>
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-3"
            >
              Trailing Icons
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-list mdc-list--two-line"
    >
      <div>
         
        {"clientId":"LIST-ITEM-1","name":"material/list-item","attributes":{"url":"http://example.com","primaryText":"List Item #1","secondaryText":"List Item #1 secondary text"}}
         
      </div>
      <div>
         
        {"clientId":"LIST-ITEM-2","name":"material/list-item","attributes":{"url":"http://example.com/item-2","primaryText":"List Item #2","secondaryText":"List Item #2 secondary text"}}
         
      </div>
    </div>
    <div
      class="components-panel__body is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
              />
            </svg>
          </span>
          Style
        </button>
      </h2>
      <div
        class="components-base-control components-radio-control components-image-radio-control"
      >
        <div
          class="components-base-control__field"
        >
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="image-radio-control-1-0"
              name="image-radio-control-1"
              type="radio"
              value="basic"
            />
            <label
              for="image-radio-control-1-0"
            >
              <div
                class="components-image-radio-control__image"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 34 24"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#565D66"
                    height="5"
                    width="5"
                    x="0.181641"
                    y="9.78687"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="9.18164"
                    y="11.2869"
                  />
                  <rect
                    fill="#565D66"
                    height="5"
                    width="5"
                    x="0.181641"
                    y="0.786865"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="9.18164"
                    y="2.28687"
                  />
                  <rect
                    fill="#565D66"
                    height="5"
                    width="5"
                    x="0.181641"
                    y="18.7869"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="9.18164"
                    y="20.2869"
                  />
                </svg>
              </div>
              <span
                class="components-image-radio-control__label"
              >
                Basic List Item
              </span>
            </label>
          </div>
          <div
            class="components-radio-control__option active"
          >
            <input
              checked=""
              class="components-radio-control__input"
              id="image-radio-control-1-1"
              name="image-radio-control-1"
              type="radio"
              value="two-line"
            />
            <label
              for="image-radio-control-1-1"
            >
              <div
                class="components-image-radio-control__image"
              >
                <svg
                  fill="none"
                  height="33"
                  viewBox="0 0 36 33"
                  width="36"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#565D66"
                    height="8"
                    width="8"
                    x="0.25"
                    y="0.286865"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="1.28687"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="5.28687"
                  />
                  <rect
                    fill="#565D66"
                    height="8"
                    width="8"
                    x="0.25"
                    y="12.2869"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="13.2869"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="17.2869"
                  />
                  <rect
                    fill="#565D66"
                    height="8"
                    width="8"
                    x="0.25"
                    y="24.2869"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="25.2869"
                  />
                  <rect
                    fill="#545D67"
                    height="2"
                    width="24"
                    x="11.75"
                    y="29.2869"
                  />
                </svg>
              </div>
              <span
                class="components-image-radio-control__label"
              >
                List Item With Secondary Text
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="components-base-control components-toggle-control"
      >
        <div
          class="components-base-control__field"
        >
          <span
            class="components-form-toggle"
          >
            <input
              class="components-form-toggle__input"
              id="inspector-toggle-control-2"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
            <svg
              aria-hidden="true"
              class="components-form-toggle__off"
              focusable="false"
              height="6"
              role="img"
              viewBox="0 0 6 6"
              width="6"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
              />
            </svg>
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-2"
          >
            Leading Icons
          </label>
        </div>
      </div>
      <div
        class="components-base-control components-toggle-control"
      >
        <div
          class="components-base-control__field"
        >
          <span
            class="components-form-toggle"
          >
            <input
              class="components-form-toggle__input"
              id="inspector-toggle-control-3"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
            <svg
              aria-hidden="true"
              class="components-form-toggle__off"
              focusable="false"
              height="6"
              role="img"
              viewBox="0 0 6 6"
              width="6"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
              />
            </svg>
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-3"
          >
            Trailing Icons
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
